--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CoffeeOrderApp</string>
+    <string name="title_activity_add_coffee">AddCoffeeAct</string>
 </resources>
